-- LoyalPay consolidated schema reference

CREATE TABLE Users (
    UserId UNIQUEIDENTIFIER PRIMARY KEY,
    Email NVARCHAR(255) NOT NULL,
    Phone NVARCHAR(20) NOT NULL,
    FullName NVARCHAR(200) NOT NULL,
    PasswordHash NVARCHAR(MAX) NOT NULL,
    Role NVARCHAR(50) NOT NULL,
    IsActive BIT NOT NULL,
    KycStatus NVARCHAR(50) NOT NULL,
    KycDocumentType NVARCHAR(100) NULL,
    KycDocumentNumber NVARCHAR(100) NULL,
    KycFilePath NVARCHAR(MAX) NULL,
    KycRejectionNote NVARCHAR(500) NULL,
    KycReviewedAt DATETIME2 NULL,
    CreatedAt DATETIME2 NOT NULL
);

CREATE TABLE RefreshTokens (
    Id INT IDENTITY PRIMARY KEY,
    UserId UNIQUEIDENTIFIER NOT NULL,
    Token NVARCHAR(MAX) NOT NULL,
    ExpiresAt DATETIME2 NOT NULL,
    IsRevoked BIT NOT NULL,
    CreatedAt DATETIME2 NOT NULL,
    CONSTRAINT FK_RefreshTokens_Users FOREIGN KEY (UserId) REFERENCES Users(UserId)
);

CREATE TABLE WalletAccounts (
    WalletId UNIQUEIDENTIFIER PRIMARY KEY,
    UserId UNIQUEIDENTIFIER NOT NULL UNIQUE,
    Balance DECIMAL(18,2) NOT NULL,
    IsActive BIT NOT NULL,
    CreatedAt DATETIME2 NOT NULL,
    UpdatedAt DATETIME2 NOT NULL
);

CREATE TABLE LedgerEntries (
    EntryId UNIQUEIDENTIFIER PRIMARY KEY,
    WalletId UNIQUEIDENTIFIER NOT NULL,
    EntryType NVARCHAR(20) NOT NULL,
    Amount DECIMAL(18,2) NOT NULL,
    BalanceAfter DECIMAL(18,2) NOT NULL,
    Description NVARCHAR(500) NULL,
    CreatedAt DATETIME2 NOT NULL
);

CREATE TABLE TopUpRequests (
    TopUpId UNIQUEIDENTIFIER PRIMARY KEY,
    WalletId UNIQUEIDENTIFIER NOT NULL,
    Amount DECIMAL(18,2) NOT NULL,
    PaymentMethod NVARCHAR(100) NOT NULL,
    Status NVARCHAR(50) NOT NULL,
    CreatedAt DATETIME2 NOT NULL,
    CONSTRAINT FK_TopUp_Wallet FOREIGN KEY (WalletId) REFERENCES WalletAccounts(WalletId)
);

CREATE TABLE TransferRequests (
    TransferId UNIQUEIDENTIFIER PRIMARY KEY,
    SenderWalletId UNIQUEIDENTIFIER NOT NULL,
    ReceiverWalletId UNIQUEIDENTIFIER NOT NULL,
    Amount DECIMAL(18,2) NOT NULL,
    Note NVARCHAR(500) NULL,
    CreatedAt DATETIME2 NOT NULL
);

CREATE TABLE RewardAccounts (
    RewardId UNIQUEIDENTIFIER PRIMARY KEY,
    UserId UNIQUEIDENTIFIER NOT NULL UNIQUE,
    TotalPoints INT NOT NULL,
    Tier NVARCHAR(50) NOT NULL,
    CreatedAt DATETIME2 NOT NULL,
    UpdatedAt DATETIME2 NOT NULL
);

CREATE TABLE RewardTransactions (
    TxnId UNIQUEIDENTIFIER PRIMARY KEY,
    UserId UNIQUEIDENTIFIER NOT NULL,
    TxnType NVARCHAR(20) NOT NULL,
    Points INT NOT NULL,
    Description NVARCHAR(500) NULL,
    CreatedAt DATETIME2 NOT NULL
);

CREATE TABLE CatalogItems (
    ItemId UNIQUEIDENTIFIER PRIMARY KEY,
    Name NVARCHAR(200) NOT NULL,
    Description NVARCHAR(500) NULL,
    ItemType NVARCHAR(50) NOT NULL,
    PointsCost INT NOT NULL,
    Stock INT NOT NULL,
    IsActive BIT NOT NULL,
    CreatedAt DATETIME2 NOT NULL
);

CREATE TABLE Redemptions (
    RedemptionId UNIQUEIDENTIFIER PRIMARY KEY,
    UserId UNIQUEIDENTIFIER NOT NULL,
    ItemId UNIQUEIDENTIFIER NOT NULL,
    PointsSpent INT NOT NULL,
    CouponCode NVARCHAR(200) NULL,
    CreatedAt DATETIME2 NOT NULL
);

CREATE TABLE Campaigns (
    CampaignId UNIQUEIDENTIFIER PRIMARY KEY,
    Name NVARCHAR(200) NOT NULL,
    Description NVARCHAR(500) NULL,
    BonusPoints INT NOT NULL,
    StartDate DATETIME2 NOT NULL,
    EndDate DATETIME2 NOT NULL,
    IsActive BIT NOT NULL,
    CreatedAt DATETIME2 NOT NULL
);

CREATE TABLE AuditLogs (
    LogId UNIQUEIDENTIFIER PRIMARY KEY,
    AdminUserId UNIQUEIDENTIFIER NOT NULL,
    Action NVARCHAR(200) NOT NULL,
    Notes NVARCHAR(500) NULL,
    CreatedAt DATETIME2 NOT NULL
);
